Change method Pack, add unit tests