@@ -1,17 +1,18 @@
 package com.robert.BT1;
 
+import java.util.ArrayList;
 import java.util.Collections;
-import java.util.LinkedList;
 
 import com.robert.BT1.CommonCard.Suit;
 
 public class Pack {
 	public static final int numberOfCards = 52;
 	private static Pack pack = new Pack();
-	private static LinkedList<CommonCard> cards;
+	private static ArrayList<CommonCard> cards;
 	
 	private Pack(){
-		cards = new LinkedList<CommonCard>();
+		cards = new ArrayList<CommonCard>();
+		
 		int cardNumber[] = new int[52];
 		int level[] = new int[52];
 		Suit suit[] = new Suit[52];
@@ -23,13 +24,14 @@ public class Pack {
 				level[i] = numberOfCards-3+i;
 			}
 		}
-
-		for (int i = 0; i < 4; i++)
+		
+		for (int i = 0; i < 4; i++) {
 			for (int j = 0; j < 13; j++)
 			{
 				suit[i+j*4] = Suit.values()[i];
 				cardNumber[i+j*4] = j+2;
 			}
+		}
 		for (int i=0; i<numberOfCards; i++){
 			cards.add(new CommonCard(cardNumber[i], suit[i], level[i]));
 		}
@@ -51,11 +53,11 @@ public class Pack {
 	}
 	
 	public static CommonCard getFirst(){
-		return cards.getFirst();
+		return cards.get(0);
 	}
 	
 	public static void removeFirst(){
-		cards.removeFirst();
+		cards.remove(0);
 	}
 	
 	public static boolean isEmpty(){
